Added signup button that fetches signup html page

--- a/public/hello.html
+++ b/public/hello.html
@@ -7,6 +7,10 @@
         <h1>
             Website
         </h1>
+        <form action="/signup" method="get"> 
+            <button name="signup">Signup</button>
+        </form>
+
         <p style="color:aquamarine">Putting an Image</p>
         
         
